# atsamd

./: Cargo.toml
atsamd-hal-macros/: devices.yaml
boards/atsamc21_xpro/: Cargo.toml
boards/atsamc21_xpro/examples/: blinky_pac.rs
hal/: Cargo.toml
hal/src/: interrupt.rs  lib.rs  prelude.rs  rtc.rs
hal/src/async_hal/: interrupts.rs
hal/src/dmac/: async_api.rs  dma_controller.rs  mod.rs
hal/src/dmac/channel/: mod.rs  reg.rs
hal/src/gpio/: dynpin.rs  pin.rs  reg.rs
hal/src/peripherals/: can.rs  mod.rs
hal/src/peripherals/adc/: async_api.rs  builder.rs  c2x.rs  mod.rs
hal/src/peripherals/calibration/: c2x.rs
hal/src/peripherals/clock/: d11.rs
hal/src/peripherals/pwm/: c2x.rs
hal/src/peripherals/timer/: c2x.rs  (+1 more)
hal/src/sercom/: dma.rs  i2c.rs  mod.rs  pad.rs  spi.rs  uart.rs
pac/atsamc20e/: Cargo.toml
pac/atsamc20e/src/: dsu.rs  eic.rs  evsys.rs  lib.rs  pac.rs
pac/atsamc20g/: Cargo.toml
pac/atsamc20g/src/: divas.rs  lib.rs  mclk.rs  osc32kctrl.rs  pm.rs  supc.rs
pac/atsamc20j/: Cargo.toml
pac/atsamc20j/src/: lib.rs  rtc.rs  system_control.rs
pac/atsamc20n/: Cargo.toml
pac/atsamc20n/src/: lib.rs  nvmctrl.rs
pac/atsamc21e/: Cargo.toml
pac/atsamc21e/src/: ac.rs  adc0.rs  lib.rs  port.rs  sercom0.rs
pac/atsamc21g/: Cargo.toml
pac/atsamc21g/src/: dac.rs  gclk.rs  lib.rs  rstc.rs  tsens.rs
pac/atsamc21j/: Cargo.toml
pac/atsamc21j/src/: evsys.rs  hmatrixhs.rs  lib.rs
pac/atsamc21n/: Cargo.toml
pac/atsamc21n/src/: evsys.rs  gclk.rs  lib.rs  mclk.rs  mtb.rs  oscctrl.rs  sdadc.rs  supc.rs  tcc0.rs
pac/atsamd11c/: Cargo.toml
(+335 files in other folders)
