[workspace]

[package]
name = "atsamc21_xpro"
version = "0.0.0"
authors = [
    "Jeremy Boynes <jeremy@boynes.com>"
]
description = "Board Support crate for the SAM C21 Xplained Pro Evaluation Kit"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"

[dependencies]
libm = "0.2.11"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

[dependencies.atsamd-hal]
path = "../../hal"
version = "0.20.2"
default-features = false

[dependencies.usb-device]

version = "0.3.1"
optional = true

[dev-dependencies]
panic-halt = "0.2"

[features]
default = ["rt", "atsamd-hal/samc21j"]
dma = ["atsamd-hal/dma"]
max-channels = ["dma", "atsamd-hal/max-channels"]
# Enable async support from atsamd-hal
async = ["atsamd-hal/async"]
rt = ["cortex-m-rt", "atsamd-hal/samc21j-rt"]
usb = ["atsamd-hal/usb", "usb-device"]
can = ["atsamd-hal/can"]

[[example]]
name = "blinky_pac"
